# Share-Forge

./: .gitignore  Dockerfile  README.md  Scaler School of Technology.mhtml  client.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pre_validation.py  pyproject.toml  share_forge.db  train.py  train_bc.py  train_chronos_finetune.py  train_chronos_multistock.py  train_forecaster.py  train_walkforward.py
checkpoints/chronos_multistock/: config.json  training_summary.json
frontend/: app.js  index.html  style.css
ml/: bc_model.py  chronos_forecaster.py  expert_policy.py  forecaster_dataset.py  forecaster_model.py
notebooks/: train_on_colab.ipynb
server/: app.py  data_loader.py  database.py  environment.py  forecaster.py  grader.py  gradio_ui.py  policy_loader.py  requirements.txt  tasks.py  trading_env.py
server/data/: GOLDBEES.NS.full.csv  TATAGOLD.NS.full.csv
